# README_Generator

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: example_config.json  russian_config.json  simple_config.json
generator/: __init__.py  badges.py  cli.py  config.py  sections.py  templates.py  utils.py
templates/: default.md  default_ru.md  web.md
tests/: test_badges.py  test_cli.py  test_config.py  test_sections.py  test_templates.py  test_utils.py
